STERI016-127-icon-numbers-am:Adjust number alignment and font size to ensure consistency across mobile and desktop views (#744)

--- a/blocks/icon-list/icon-list.css
+++ b/blocks/icon-list/icon-list.css
@@ -311,7 +311,6 @@ main .section.two-column.icon-list-container:has(.vertical-numbers) div.icon-lis
 main .section.two-column.icon-list-container:has(.vertical-numbers) div.icon-list > div > div:first-of-type {
     height: fit-content;
     width: 100%;
-    text-align: center;
 }
 
 main .section.two-column.icon-list-container:has(.vertical-numbers) div.icon-list > div > div:nth-of-type(2) {
@@ -354,7 +353,7 @@ main .section.two-column.icon-list-container:has(.vertical-numbers) > div:first-
 
 main .section.two-column.icon-list-container:has(.vertical-numbers) div.icon-list > div > div:first-child p:not(:has(> span.icon)) {
     color: var(--color-icon-accent);
-    font-size: var(--heading-font-size-xxl);
+    font-size: 48px;
     font-weight: var(--font-weight-bold);
     line-height: 120%;
     letter-spacing: 0.48px;
